[package]
name = "sdkwork-drive-app-api"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
axum = "0.7"
serde = { workspace = true, features = ["derive"] }
http = "1.4"
serde_json.workspace = true
sdkwork-drive-observability.workspace = true
sdkwork-drive-config.workspace = true
sdkwork-drive-security.workspace = true
sdkwork-drive-product.workspace = true
sdkwork-drive-storage-contract.workspace = true
sdkwork-drive-storage-s3.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["fmt"] }
