[package]
name = "sdkwork-drive-product"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
sdkwork-drive-config = { path = "../../crates/sdkwork-drive-config" }
sdkwork-drive-core = { path = "../../crates/sdkwork-drive-core" }
sdkwork-drive-storage-contract = { path = "../../crates/sdkwork-drive-storage-contract" }
sdkwork_id.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
sha2 = "0.10"
tokio.workspace = true

[dev-dependencies]
sdkwork-drive-storage-local = { path = "../../crates/sdkwork-drive-storage-local" }
